--- a/index.html
+++ b/index.html
@@ -13,31 +13,9 @@
 			<h2>Attributes</h2>
 			<div id="attributes"></div>
 		</section>
-		<section>
-			<h2>Weapons</h2>
-			<div id="weapons"></div>
-		</section>
-		<section>
-			<h2>Defensive</h2>
-			<div id="defensive"></div>
-		</section>
-		<section>
-			<h2>Magic</h2>
-			<div id="magic"></div>
-		</section>
-		<section>
-			<h2>Crafting</h2>
-			<div id="crafting"></div>
-		</section>
-		<section>
-			<h2>Roleplaying</h2>
-			<div id="roleplaying"></div>
-		</section>
-		<section>
-			<h2>Language</h2>
-			<div id="language"></div>
-		</section>
 	</div>
-	<script src="./assets/js/script.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="./assets/js/characterlib.js"></script>
+	<script src="./assets/js/charsheet.js"></script>
 </body>
 </html>
