--- a/index.html
+++ b/index.html
@@ -8,10 +8,36 @@
 </head>
 <body>
 	<h1>ESO - Character Sheet</h1>
+	<section>
+		<label for="charName">Name:</label>
+		<input type="text" name="charName"></input>
+		<label for="charRace">Race:</label>
+		<select name="charRace"></select>
+	</section>
 	<div id="main">
 		<section>
 			<h2>Attributes</h2>
 			<div id="attributes"></div>
+		</section>
+		<section>
+			<h2>Combat Skills</h2>
+			<div id="skillsCombat"></div>
+		</section>
+		<section>
+			<h2>Magic Skills</h2>
+			<div id="skillsMagic"></div>
+		</section>
+		<section>
+			<h2>General Skills</h2>
+			<div id="skillsGeneral"></div>
+		</section>
+		<section>
+			<h2>Crafting Skills</h2>
+			<div id="skillsCrafting"></div>
+		</section>
+		<section>
+			<h2>Knowledge Skills</h2>
+			<div id="skillsKnowledge"></div>
 		</section>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
