--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 		<input type="text" name="charName"></input>
 		<label for="charRace">Race:</label>
 		<select name="charRace"></select>
+		<label for="charSex">Sex:</label>
+		<select name="charSex">
+			<option>Male</option>
+			<option>Female</option>
+		</select>
 	</section>
 	<div id="main">
 		<section>
