--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<div id="skillsKnowledge"></div>
 		</section>
 	</div>
+	<footer>Hello world!</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./assets/js/characterlib.js"></script>
 	<script src="./assets/js/charsheet.js"></script>
