Added character printout.

--- a/index.html
+++ b/index.html
@@ -18,34 +18,40 @@
 			<option>Male</option>
 			<option>Female</option>
 		</select>
+		<label for="charSupernatural">Supernatural:</label>
+		<select name="charSupernatural"></select>
+		<label for="charClass">Class:</label>
+		<select name="charClass"></select>
 	</section>
 	<div id="main">
 		<section>
-			<h2>Attributes</h2>
+			<h3>Attributes</h3>
 			<div id="attributes"></div>
 		</section>
 		<section>
-			<h2>Combat Skills</h2>
+			<h3>Combat Skills</h3>
 			<div id="skillsCombat"></div>
 		</section>
 		<section>
-			<h2>Magic Skills</h2>
+			<h3>Magic Skills</h3>
 			<div id="skillsMagic"></div>
 		</section>
 		<section>
-			<h2>General Skills</h2>
+			<h3>General Skills</h3>
 			<div id="skillsGeneral"></div>
 		</section>
 		<section>
-			<h2>Crafting Skills</h2>
+			<h3>Crafting Skills</h3>
 			<div id="skillsCrafting"></div>
 		</section>
 		<section>
-			<h2>Knowledge Skills</h2>
+			<h3>Knowledge Skills</h3>
 			<div id="skillsKnowledge"></div>
 		</section>
 	</div>
-	<footer>Hello world!</footer>
+	<h2>Character Printout</h2>
+	<div id="printout"></div>
+	<footer></footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./assets/js/characterlib.js"></script>
 	<script src="./assets/js/charsheet.js"></script>
