Added clipboard functionality to printout.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</section>
 	</div>
 	<h2>Character Printout</h2>
-	<div id="printout"></div>
+	<div id="printout" title="Double click to copy character sheet."></div>
 	<footer></footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./assets/js/characterlib.js"></script>
