Added point buy system.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<section>
 		<label for="charName">Name:</label>
 		<input type="text" name="charName"></input>
+		<label for="charPlayer">@</label>
+		<input type="text" name="charPlayer"></input>
 		<label for="charRace">Race:</label>
 		<select name="charRace"></select>
 		<label for="charSex">Sex:</label>
@@ -23,6 +25,10 @@
 		<label for="charClass">Class:</label>
 		<select name="charClass"></select>
 	</section>
+	<div id="points">
+		<h3>Attribute Points: <span id="attributePoints">0/10</span></h3>
+		<h3>Skill Points: <span id="skillPoints">0/30</span></h3>
+	</div>
 	<div id="main">
 		<section>
 			<h3>Attributes</h3>
