Added character save/load.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 <body>
 	<h1>ESO - Character Sheet</h1>
 	<section>
-		<label for="charName">Name:</label>
-		<input type="text" name="charName"></input>
-		<label for="charPlayer">@</label>
-		<input type="text" name="charPlayer"></input>
-		<label for="charRace">Race:</label>
-		<select name="charRace"></select>
-		<label for="charSex">Sex:</label>
-		<select name="charSex">
-			<option>Male</option>
-			<option>Female</option>
-		</select>
-		<label for="charSupernatural">Supernatural:</label>
-		<select name="charSupernatural"></select>
-		<label for="charClass">Class:</label>
-		<select name="charClass"></select>
+		<div>
+			<label for="charName">Name:</label>
+			<input type="text" name="charName"></input>
+			<label for="charPlayer">@</label>
+			<input type="text" name="charPlayer"></input>
+			<button id="saveChar" type="button">Save</button>
+			<button id="loadChar" type="button">Load</button>
+		</div>
+		<div>
+			<label for="charRace">Race:</label>
+			<select name="charRace"></select>
+			<label for="charSex">Sex:</label>
+			<select name="charSex">
+				<option>Male</option>
+				<option>Female</option>
+			</select>
+			<label for="charSupernatural">Supernatural:</label>
+			<select name="charSupernatural"></select>
+			<label for="charClass">Class:</label>
+			<select name="charClass"></select>
+		</div>
 	</section>
 	<div id="points">
 		<h3>Attribute Points: <span id="attributePoints">0/10</span></h3>
@@ -58,7 +64,17 @@
 	<h2>Character Printout</h2>
 	<div id="printout" title="Double click to copy character sheet."></div>
 	<footer></footer>
+	<div id="modalBG">
+		<div id="errorModal">
+			<h3>Error</h3>
+			<p id="errorText"></p>
+			<button id="errorButton" type="button">Ok</button>
+		</div>
+	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
+	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/characterlib.js"></script>
 	<script src="./assets/js/charsheet.js"></script>
 </body>
