Started Rollplaying page.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Character Sheet</title>
+	<title>ESO Roleplay - Character Sheet</title>
 	<link rel="stylesheet" href="./assets/css/style.css" />
+	<link rel="stylesheet" href="./assets/css/charsheet.css" />
 </head>
 <body>
-	<h1>ESO - Character Sheet</h1>
+	<aside><a id="referLink" href="rollplay.html" target="_blank">Use your character! →</a></aside>
+	<h1>ESO Roleplay - Character Sheet</h1>
 	<section>
 		<div>
 			<label for="charName">Name:</label>
