--- a/rollplay.html
+++ b/rollplay.html
@@ -38,6 +38,10 @@
 			<p id="errorText"></p>
 			<button id="errorButton" type="button">Ok</button>
 		</div>
+		<div id="rollModal">
+			<h3>You Need to Roll!</h3>
+			TODO!
+		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
