--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<aside><a id="referLink" href="rollplay.html" target="_blank">Use your character! →</a></aside>
 	<h1>ESO Roleplay - Character Sheet</h1>
 	<section>
-		<div>
+		<form>
 			<label for="charName">Name:</label>
 			<input type="text" name="charName"></input>
 			<label for="charPlayer">@</label>
 			<input type="text" name="charPlayer"></input>
 			<button id="saveChar" type="button">Save</button>
-			<button id="loadChar" type="button">Load</button>
-		</div>
+			<button id="loadChar" type="submit">Load</button>
+		</form>
 		<div>
 			<label for="charRace">Race:</label>
 			<select name="charRace"></select>
