--- a/rollplay.html
+++ b/rollplay.html
@@ -47,7 +47,7 @@
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 	<script src="./assets/js/firebase.js"></script>
-	<script src="./assets/js/characterlib.js"></script>
+	<script src="./assets/js/esorplib.js"></script>
 	<script src="./assets/js/rollplay.js"></script>
 </body>
 </html>
