Corrected error modal display.

--- a/rollplay.html
+++ b/rollplay.html
@@ -25,7 +25,7 @@
 			<div>
 				<h3>Make a Roll!</h3>
 				<select id="rollSelect"></select>
-				<button id="rollExecute" type="button">Roll →</button>
+				<button id="rollExecute" type="button" disabled>Roll →</button>
 			</div>
 		</section>
 		<section id="readOut">
