GM Screen mockup.

--- a/rollplay.html
+++ b/rollplay.html
@@ -29,7 +29,7 @@
 			</div>
 		</section>
 		<section id="readOut">
-			<h2>The Action</h2>
+			<h2>Roll History</h2>
 		</section>
 	</div>
 	<div id="modalBG">
