Added description field.

--- a/charsheet.html
+++ b/charsheet.html
@@ -63,8 +63,16 @@
 			<div id="skillsKnowledge"></div>
 		</section>
 	</div>
-	<h2>Character Printout</h2>
-	<div id="printout" title="Double click to copy character sheet."></div>
+	<div id="bottomInfo">
+		<div>
+			<h2>Character Printout</h2>
+			<div id="printout" title="Double click to copy character sheet."></div>
+		</div>
+		<div>
+			<h2>Character Background</h2>
+			<textarea type="textarea" name="charBackground" maxlength="1000" rows="10"></textarea>
+		</div>
+	</div>
 	<footer></footer>
 	<div id="modalBG">
 		<div id="errorModal">
