Event system implementation.

--- a/charsheet.html
+++ b/charsheet.html
@@ -15,7 +15,7 @@
 			<label for="charName">Name:</label>
 			<input type="text" name="charName"></input>
 			<label for="charPlayer">@</label>
-			<input type="text" name="charPlayer"></input>
+			<input type="text" name="charPlayer" placeholder="Account Name"></input>
 			<button id="saveChar" type="button">Save</button>
 			<button id="loadChar" type="submit">Load</button>
 		</form>
