--- a/rollplay.html
+++ b/rollplay.html
@@ -36,7 +36,7 @@
 			</div>
 		</section>
 		<section id="readOut">
-			<h2>Roll History</h2>
+			<h2>Session History</h2>
 			<div id="eventPane"></div>
 		</section>
 	</div>
