Added GM 'roll against' capability vs. player rolls.

--- a/rollplay.html
+++ b/rollplay.html
@@ -30,7 +30,7 @@
 						<button id="rollExecute" type="button" disabled>Roll →</button>						
 					</div>
 					<div>
-						<input type="text" id="rollComment" maxlength="100"></input>
+						<input type="text" id="rollComment" placeholder='Comment' maxlength="100"></input>
 					</div>
 				</div>
 			</div>
