--- a/gmscreen.html
+++ b/gmscreen.html
@@ -14,7 +14,7 @@
 			<h2>Current Session</h2>
 			<div>
 				<label for="gmPlayer">Owner: @</label>
-				<input type="text" name="gmPlayer"></input>
+				<input type="text" name="gmPlayer" placeholder="Account Name"></input>
 				<button type="button" id="createNewSession">Create New Session</button>
 			</div>
 			<div>
@@ -23,7 +23,7 @@
 					<div id="npcList">
 						<ol></ol>
 						<form>
-							<input type="text" name="newNPC"></input>
+							<input type="text" name="newNPC" placeholder="New NPC name here"></input>
 							<button type="submit" id="addNPC">Add</button>
 						</form>
 					</div>
@@ -60,7 +60,7 @@
 					<div id="playerList">
 						<ol></ol>
 						<form>
-							<input type="text" name="newPlayer"></input>
+							<input type="text" name="newPlayer" placeholder="Character name here"></input>
 							<button type="submit" id="addPlayer">Add</button>
 						</form>
 					</div>
