Added character profile page.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<ul>
 			<li><a href="charsheet.html">Character Sheet</a></li>
 			<li><a href="rollplay.html">Rollplay</a></li>
+			<li><a href="profile.html">Browse Characters</a></li>
 		</ul>
 	</section>
 </body>
