--- a/charsheet.html
+++ b/charsheet.html
@@ -13,9 +13,9 @@
 	<section>
 		<form>
 			<label for="charName">Name:</label>
-			<input type="text" name="charName"></input>
+			<input type="text" name="charName" maxlength="25"></input>
 			<label for="charPlayer">@</label>
-			<input type="text" name="charPlayer" placeholder="Account Name"></input>
+			<input type="text" name="charPlayer" placeholder="Account Name" maxlength="25"></input>
 			<button id="saveChar" type="button">Save</button>
 			<button id="loadChar" type="submit">Load</button>
 		</form>
