Added profile view to GM screen.

--- a/gmscreen.html
+++ b/gmscreen.html
@@ -126,6 +126,10 @@
 			<button id="confirmOk" type="button">Ok</button>
 			<button id="confirmCancel" type="button">Cancel</button>
 		</div>
+		<div id="profileModal">
+			<iframe></iframe>
+			<button id="profileDone" type="button">Done</button>
+		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
