Responsive player page.

--- a/rollplay.html
+++ b/rollplay.html
@@ -48,8 +48,10 @@
 						</div>
 					</div>
 				</div>
-				<input type="checkbox" id="lazyMode" name="lazyMode"></input>
-				<label for="lazyMode" title="Any incoming roll requests from the GM are resolved automatically.">Lazy Mode</label>
+				<div>
+					<input type="checkbox" id="lazyMode" name="lazyMode"></input>
+					<label for="lazyMode" title="Any incoming roll requests from the GM are resolved automatically.">Lazy Mode</label>
+				</div>
 			</section>
 		</div>
 	</div>
