GM screen is now mobile friendly.

--- a/gmscreen.html
+++ b/gmscreen.html
@@ -12,12 +12,16 @@
 	<div id="main">
 		<section id="encounterInfo">
 			<h2>Current Session</h2>
-			<div>
-				<label for="gmPlayer">Owner: @</label>
-				<input type="text" name="gmPlayer" placeholder="Account Name" maxlength="25"></input>
-				<button type="button" id="createNewSession">Create New Session</button>
-				<button type="button" id="endSession">EndSession</button>
-			</div>
+			<form>
+				<div>
+					<label for="gmPlayer">Owner: @</label>
+					<input type="text" name="gmPlayer" placeholder="Account Name" maxlength="25"></input>
+				</div>
+				<div>
+					<button type="button" id="createNewSession">Create New Session</button>
+					<button type="button" id="endSession">EndSession</button>
+				</div>
+			</form>
 			<div>
 				<h3>NPCs</h3>
 				<div id="npcManagement">
