Better session loading.

--- a/gmscreen.html
+++ b/gmscreen.html
@@ -18,8 +18,8 @@
 					<input type="text" name="gmPlayer" placeholder="Account Name" maxlength="25"></input>
 				</div>
 				<div>
-					<button type="button" id="createNewSession">Create New Session</button>
-					<button type="button" id="endSession">EndSession</button>
+					<button type="submit" id="createNewSession">Open Session</button>
+					<button type="button" id="endSession">End Session</button>
 				</div>
 			</form>
 			<div>
