Corrected NPC resistance calculations and comment display.

--- a/rollplay.html
+++ b/rollplay.html
@@ -64,6 +64,7 @@
 		<div id="rollModal">
 			<h3>Roll Needed!</h3>
 			<p id="forceRollText"></p>
+			<p id="forceRollGMComment"></p>
 			<input type="text" id="forceRollComment" placeholder='Comment' maxlength="100"></input>
 			<button id="makeForceRoll" type="button">Roll!</button>
 		</div>
