Added GM Posts.  Backend changes for future development.

--- a/gmscreen.html
+++ b/gmscreen.html
@@ -115,6 +115,15 @@
 						</div>
 					</div>
 				</div>
+				<h3>Make a GM Post</h3>
+				<div id="commentArea">
+					<div>
+						<textarea id="GMPost" maxlength="500" placeholder="Make a post here and hit Send."></textarea>
+					</div>
+					<div>
+						<button type="button" id="sendComment">Send</button>
+					</div>
+				</div>
 			</section>
 		</div>
 	</div>
