Added player vs. player rolls.

--- a/gmscreen.html
+++ b/gmscreen.html
@@ -115,6 +115,16 @@
 							</div>
 						</div>
 					</div>
+					<div class="flexMe">
+						<div class="flexMe">
+							<select id="playerContested1"></select>
+							<select id="playerKey1"></select>
+						</div>
+						<button type="button" id="rollPlayerContested">Roll Against</button>
+						<div class="flexMe">
+							<select id="playerContested2"></select>
+							<select id="playerKey2"></select>
+					</div>
 				</div>
 				<h3>Make a GM Post</h3>
 				<div id="commentArea">
