Added selection for characters in multiple open sessions.

--- a/rollplay.html
+++ b/rollplay.html
@@ -61,6 +61,12 @@
 			<p id="errorText"></p>
 			<button id="errorButton" type="button">Ok</button>
 		</div>
+		<div id="sessionModal">
+			<h3>Session Selection</h3>
+			<p>Choose the GM of the session you will be joining:</p>
+			<div id="sessionList"></div>
+			<button type="button" id="sessionSelectionCancel">Cancel</button>
+		</div>
 		<div id="rollModal">
 			<h3>Roll Needed!</h3>
 			<p id="forceRollText"></p>
