Added character sheet help popup. Corrected potential skill overflow.

--- a/charsheet.html
+++ b/charsheet.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="./assets/css/charsheet.css" />
 </head>
 <body>
+	<div id="helpPanel">
+		<button type="button" id="buttonHelp">Help</button>
+	</div>
 	<aside><a id="referLink" href="rollplay.html" target="_blank">Use your character! →</a></aside>
 	<h1>ESO Roleplay - Character Sheet</h1>
 	<section>
@@ -69,12 +72,26 @@
 			<div id="printout" title="Double click to copy character sheet."></div>
 		</div>
 		<div>
-			<h2>Character Background</h2>
+			<h2>Character Description</h2>
 			<textarea type="textarea" name="charBackground" maxlength="1000" rows="10"></textarea>
 		</div>
 	</div>
 	<footer></footer>
 	<div id="modalBG">
+		<div id="helpModal">
+			<h2>Building Your Character</h2>
+			<h3>Name/Race/Etc.</h3>
+			<p>You must specify a character name and account name to save your character.  Race, sex, and supernatural type have an effect on stats, so be sure to select the appropriate values.</p>
+			<h3>Attributes</h3>
+			<p>You should begin by choosing your attribute scores. This is a straight 1-for-1 point buy.</p>
+			<h3>SKills</h3>
+			<p>Skills are added much like attributes, but they increase in cost as you increase in rank. However, the governing attribute of a skill controls how quickly the increase occurs.</p>
+			<h3>Knowledge Skills</h3>
+			<p>Knowledge skills are a special class of skill that always have Intelligence as their governing attribute.  Some are more difficult to learn and increase in difficulty more quickly.</p>
+			<h3>Finishing Touches</h3>
+			<p>Below your skill selections, you can see your character's stat summary.  There is a field to enter a brief description of your character as well.</p>
+			<button id="helpDone" type="button">Ok</button>
+		</div>
 		<div id="errorModal">
 			<h3>Error</h3>
 			<p id="errorText"></p>
