--- a/charsheet.html
+++ b/charsheet.html
@@ -80,16 +80,18 @@
 	<div id="modalBG">
 		<div id="helpModal">
 			<h2>Building Your Character</h2>
-			<h3>Name/Race/Etc.</h3>
-			<p>You must specify a character name and account name to save your character.  Race, sex, and supernatural type have an effect on stats, so be sure to select the appropriate values.</p>
-			<h3>Attributes</h3>
-			<p>You should begin by choosing your attribute scores. This is a straight 1-for-1 point buy.</p>
-			<h3>Skills</h3>
-			<p>Skills are added much like attributes, but they increase in cost as you increase in rank. However, the governing attribute of a skill controls how quickly the increase occurs.</p>
-			<h3>Knowledge Skills</h3>
-			<p>Knowledge skills are a special class of skill that always have Intelligence as their governing attribute.  Some are more difficult to learn and increase in difficulty more quickly.</p>
-			<h3>Finishing Touches</h3>
-			<p>Below your skill selections, you can see your character's stat summary.  There is a field to enter a brief description of your character as well.</p>
+			<div>
+				<h3>Name/Race/Etc.</h3>
+				<p>You must specify a character name and account name to save your character.  Race, sex, and supernatural type have an effect on stats, so be sure to select the appropriate values.</p>
+				<h3>Attributes</h3>
+				<p>You should begin by choosing your attribute scores. This is a straight 1-for-1 point buy.</p>
+				<h3>Skills</h3>
+				<p>Skills are added much like attributes, but they increase in cost as you increase in rank. However, the governing attribute of a skill controls how quickly the increase occurs.</p>
+				<h3>Knowledge Skills</h3>
+				<p>Knowledge skills are a special class of skill that always have Intelligence as their governing attribute.  Some are more difficult to learn and increase in difficulty more quickly.</p>
+				<h3>Finishing Touches</h3>
+				<p>Below your skill selections, you can see your character's stat summary.  There is a field to enter a brief description of your character as well.</p>
+			</div>
 			<button id="helpDone" type="button">Ok</button>
 		</div>
 		<div id="errorModal">
