Added Name Generator page (more data to come)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<li><a href="charsheet.html">Character Sheet</a></li>
 			<li><a href="rollplay.html">Rollplay</a></li>
 			<li><a href="profile.html">Browse Characters</a></li>
+			<li><a href="namegenerator.html">Generate Lore Friendly Names</a></li>
 		</ul>
 	</section>
 </body>
