--- a/gmscreen.html
+++ b/gmscreen.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ESO Roleplay - GM's Screen</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/gmscreen.css" />
 </head>
@@ -74,7 +75,7 @@
 						<ol></ol>
 						<form>
 							<input type="text" name="newPlayer" placeholder="Character name here" maxLength="25"></input>
-							<button type="button" id="searchPlayer">?</button>
+							<button type="button" id="searchPlayer" title="Search for a character by account name.">?</button>
 							<button type="submit" id="addPlayer">Add</button>
 						</form>
 					</div>
