--- a/charsheet.html
+++ b/charsheet.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ESO Roleplay - Character Sheet</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/charsheet.css" />
 </head>
@@ -18,7 +19,7 @@
 			<label for="charName">Name:</label>
 			<span id="charInput">
 				<input type="text" name="charName" maxlength="25"></input>
-				<button id="generateName" type="button">?</button>
+				<button id="generateName" type="button" title="Generate a random name.">?</button>
 			</span>
 			<label for="charPlayer">@</label>
 			<input type="text" name="charPlayer" placeholder="Account Name" maxlength="25"></input>
