Rollplay popup now shows dice rolls.

--- a/rollplay.html
+++ b/rollplay.html
@@ -82,8 +82,12 @@
 			<h3>Roll Needed!</h3>
 			<p id="forceRollText"></p>
 			<p id="forceRollGMComment"></p>
-			<input type="text" id="forceRollComment" placeholder='Comment' maxlength="100"></input>
-			<button id="makeForceRoll" type="button">Roll!</button>
+			<form>
+				<input type="text" id="forceRollComment" placeholder='Comment' maxlength="100"></input>
+				<button id="makeForceRoll" type="submit">Roll!</button>
+			</form>
+			<div id="forceRollPanel"></div>
+			<button id="forceRollContinue">Continue</button>
 		</div>
 		<div id="profileModal">
 			<iframe></iframe>
