1/2 of armor skill is now added to Toughness rolls.

--- a/rollplay.html
+++ b/rollplay.html
@@ -23,6 +23,13 @@
 				</div>
 			</form>
 			<div id="printout" title="Double click to copy character sheet."></div>
+			<div id="charStatus">
+				<h3>Character Info</h3>
+				<div>
+					<label for="playerArmor">Worn Armor:</label>
+					<select id="playerArmor" name="playerArmor"></select>
+				</div>
+			</div>
 			<h3>Party</h3>
 			<ol id="charList"></ol>
 		</section>
