--- a/charsheet.html
+++ b/charsheet.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ESO Roleplay - Character Sheet</title>
+	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/charsheet.css" />
@@ -12,7 +13,7 @@
 	<div id="helpPanel">
 		<button type="button" id="buttonHelp">Help</button>
 	</div>
-	<aside><a id="referLink" href="rollplay.html" target="_blank">Use your character! →</a></aside>
+	<aside><a id="referLink" href="rollplay.html">Use your character! →</a></aside>
 	<h1>ESO Roleplay - Character Sheet</h1>
 	<section>
 		<form>
