One Hand and Shield has been separated into One Handed and Block skills.  Block provides a bonus on Defense rolls.

--- a/rollplay.html
+++ b/rollplay.html
@@ -26,10 +26,10 @@
 			<div id="printout" title="Double click to copy character sheet."></div>
 			<div id="charStatus">
 				<h3>Character Info</h3>
-				<div>
-					<label for="playerArmor">Worn Armor:</label>
-					<select id="playerArmor" name="playerArmor"></select>
-				</div>
+				<label for="playerWeapon">Equipped:</label>
+				<select id="playerWeapon" name="playerWeapon"></select>
+				<label for="playerArmor">Armor:</label>
+				<select id="playerArmor" name="playerArmor"></select>
 			</div>
 			<h3>Party</h3>
 			<ol id="charList"></ol>
